# rpc

./: CMakeLists.txt  README.md  autobuild.sh
config/: test.conf
example/: friend.proto  user.proto
example/callee/: friendservice.cc  userservice.cc
example/caller/: callfriendservice.cc  calluserservice.cc
lib/include/: mprpcapplication.h  rpcprovider.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h
test/protobuf/: a.out  main.cc  test.proto
